// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image Image with a preview url 1`] = `
<figure
  className="gc-image sc-bwzfXH gBXAlR"
>
  <div
    className="sc-bdVaJa gvZWvM"
  >
    <div
      style={
        Object {
          "paddingBottom": "25%",
        }
      }
    />
    <img
      alt="test"
      className="preview sc-bxivhb bAdDmw"
      crossOrigin="anonymous"
      src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/32x/-/grayscale/-/quality/lightest/mountain.jpg"
    />
    <img
      alt="test"
      className="sc-htpNat dEqXuf"
    />
  </div>
</figure>
`;

exports[`Storyshots Image Image with figcaption 1`] = `
<figure
  className="gc-image sc-bwzfXH gBXAlR"
>
  <div
    className="sc-bdVaJa gvZWvM"
  >
    <div
      style={
        Object {
          "paddingBottom": "25%",
        }
      }
    />
    <img
      alt="test"
      className="preview sc-bxivhb bAdDmw"
      crossOrigin="anonymous"
      src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/32x/-/grayscale/-/quality/lightest/mountain.jpg"
    />
    <img
      alt="test"
      className="sc-htpNat dEqXuf"
    />
  </div>
  <figcaption
    className="sc-ifAKCX bDPrmc"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
  </figcaption>
</figure>
`;

exports[`Storyshots Image Image with figcaption to the right 1`] = `
<figure
  className="gc-image sc-bwzfXH gBXAlR"
>
  <div
    className="sc-bdVaJa gvZWvM"
  >
    <div
      style={
        Object {
          "paddingBottom": "25%",
        }
      }
    />
    <img
      alt="test"
      className="preview sc-bxivhb bAdDmw"
      crossOrigin="anonymous"
      src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/32x/-/grayscale/-/quality/lightest/mountain.jpg"
    />
    <img
      alt="test"
      className="sc-htpNat dEqXuf"
    />
  </div>
  <figcaption
    className="sc-ifAKCX fBeZep"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
  </figcaption>
</figure>
`;

exports[`Storyshots Image Simple image 1`] = `
<figure
  className="gc-image sc-bwzfXH gBXAlR"
>
  <div
    className="sc-bdVaJa gvZWvM"
  >
    <div
      style={
        Object {
          "paddingBottom": "25%",
        }
      }
    />
    <img
      alt="test"
      className="preview sc-bxivhb bAdDmw"
      crossOrigin="anonymous"
      src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/300x/mountain.jpg"
    />
    <img
      alt="test"
      className="sc-htpNat dEqXuf"
    />
  </div>
</figure>
`;
